# GenEnum

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: GenEnum.h  GenEnum.hpp
